# sniffdiff

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  sniff.yml
docs/: facts.md  positioning.md  releasing.md
examples/real-world/: README.md  click-no-such-command.md  requests-digest-security.md
python/sniffdiff/: __init__.py  __main__.py  _find_sniffdiff.py
python/tests/: test_python_wrapper.py
scripts/: check-versions.py  create-demo-repo.sh  run-perf-smoke.py  run-real-example.sh
src/: git.rs  lib.rs  main.rs  timing.rs
src/analysis/: diff.rs  facts.rs  filter.rs  mod.rs  modules.rs  references.rs  signals.rs  test_facts.rs
src/language/: mod.rs  types.rs
src/output/: json.rs  mod.rs
src/output/report/: complexity.rs  labels.rs  mod.rs  references.rs  sections.rs  selection.rs
src/python/: mod.rs  references.rs  symbols.rs
src/python/references/: calls.rs  imports.rs  mod.rs  scopes.rs  util.rs
src/python/symbols/: complexity.rs  fingerprint.rs  mod.rs  signature.rs
tests/: analyze_git_repo.rs
tests/common/: mod.rs
