[package]
name = "sniffdiff"
version = "0.0.1"
authors = ["William Norman <vvilliamnorman@gmail.com>"]
edition = "2024"
description = "Semantic commit analysis for Python: blast radius, symbol diffs and complexity changes."
readme = "README.md"
repository = "https://github.com/wlamnorman/sniffdiff"
license = "MIT"
keywords = ["python", "git", "code-review", "static-analysis", "cli"]
categories = ["development-tools", "command-line-utilities"]
documentation = "https://github.com/wlamnorman/sniffdiff#readme"
exclude = ["docs/private/**", "assets/*.png"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true  # Automatically strips symbols from the binary


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tree-sitter = "0.25"
tree-sitter-python = "0.23"

[dev-dependencies]
tempfile = "3"
