[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "sniffdiff"
version = "0.0.1"
description = "Review Python diffs by changed symbols, callers, tests, and complexity."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "William Norman", email = "vvilliamnorman@gmail.com" }]
keywords = ["python", "git", "code-review", "static-analysis", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Repository = "https://github.com/wlamnorman/sniffdiff"
Documentation = "https://github.com/wlamnorman/sniffdiff#readme"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "sniffdiff"
python-source = "python"
strip = true
exclude = ["docs/private/**", "assets/*.png"]
